# AlcoInput

./: .gitignore  CMakeLists.txt
inc/: AlcoInput.hpp  Key.hpp  Keyboard.hpp  Mouse.hpp
src/: AlcoInput.cpp  Keyboard.cpp  Mouse.cpp
